# MLinCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.h  matrixTest.cpp  matrix_impl.hpp
linearRegression/: linearRegression.hpp  logisticRegression.hpp
matrix/: matrix.h  matrixDef.h  matrixTools.h  matrix_impl.hpp
misc/: exception.h  usefulTools.h
neuralNetworks/: Conv2D.cpp  Conv2D.h  Dense.cpp  Dense.h  RNN.cpp  RNN.h  parameter.cpp  parameter.h
toplevel/: model.h
unitTest/: DenseLayerTest.cpp  configure.in  foo  matrix.in  matrixTest.cpp  matrixTest.py  runLR.cpp
